force-app/main/default/objects/Batch_Approval_Tracker__c/Batch_Approval_Tracker__c.object-meta.xml
<CustomObject>
    <description>Stores the batch approval progress (CLM) information such as total number of records to be processed , submitted by , status (eg in progress,completed) , submitted date.Prevents the user from opening the tab Pending Approval Requests (CLM) while the batch execution is in progress</description>
    <label>Batch Approval Tracker</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Batch Approval Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Approval Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>