force-app/main/default/objects/Batch_Approval_Tracker__c/fields/Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>Failed_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[DCP-39772] -  Total records failed in the batch processing.</description>
    <label>Failed Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>