force-app/main/default/objects/Batch_Approval_Tracker__c/fields/Records_Processed_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed_Successfully__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[DCP-39772] - Specifies total successful records processed by batch.</description>
    <label>Records Processed Successfully</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>