force-app/main/default/objects/Batch_Approval_Tracker__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[DCP-39772] - Owner of the batch approval request</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Batch_Approval_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>